# hide.client.ubtouch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clickable.yaml  config.h.in  hide.client.ubtouch.desktop.in.in  hideme.apparmor  hideme.desktop.in.in  hideme.service  hideme.service.in  manifest.json.in
.github/workflows/: build.yml
app/: CMakeLists.txt  clitoolconnector.cpp  clitoolconnector.h  constants.h  hideme.cpp  hideme.h  logging.cpp  logging.h  main.cpp  serverselectionmodel.cpp  serverselectionmodel.h  servicemanager.cpp  servicemanager.h  settings.cpp  settings.h  socektconnector.cpp  socektconnector.h  systemdmanager.cpp  systemdmanager.h
app/ui/: hide.client.ubtouch.qml
app/ui/authentication/: AuthenticationHandler.qml  FingerprintDialog.qml  PasswordDialog.qml
app/ui/components/: BigButton.qml  DownButton.qml  LoginPassField.qml  QuickConnectItem.qml  RoundedRectangle.qml  ServerSelectionItem.qml  ServerSelectionItemLine.qml  TriangleFlag.qml
app/ui/components/ConnectionPage/: location.qml  settings.qml  vpn.qml
app/ui/dialogs/: ErrorDialog.qml  LoginFailedDialog.qml  SudoPassDialog.qml  TimeOutDialog.qml
app/ui/pages/: ConnectPage.qml  LoginPage.qml  NoToolsPage.qml  SetupServicesPage.qml  StartServicePage.qml  StoreLogsPage.qml
debian/: changelog  control  rules
po/: CMakeLists.txt
tests/: CMakeLists.txt
tests/sentry_test/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
